--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,3 +12,47 @@
         @apply flex items-center space-x-1 hover:bg-gray-200 flex-grow justify-center p-2 rounded-xl cursor-pointer;
     }
 }
+
+.lds-ring {
+    display: inline-block;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+  }
+  .lds-ring div {
+    position: absolute;
+    display: block;
+    width: 48px;
+    height: 48px;
+    border: 2px solid rgb(172, 172, 172);
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: rgb(172, 172, 172) transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  body {
+    -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  text-decoration: none;
+  }
